@@ -3,6 +3,7 @@ for _,spawns in pairs(storage.unique_spawns) do
     for _,spawn in pairs(spawns) do
         -- If the name is not nil, but the player doesn't exist, nil it out.
         if (spawn.buddy_name ~= nil) and (game.players[spawn.buddy_name] == nil) then
+            log("Removing non existent buddy from spawn info: " .. spawn.buddy_name)
             spawn.buddy_name = nil
         end
     end
